--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@tailwindcss/cli": "^4.1.13",
+    "dotenv": "^17.2.2",
     "openai": "^5.22.0",
     "tailwindcss": "^4.1.13"
   }
